<resources>
    <string name="app_name">AgendaContatos</string>
    <string name="buscar">Buscar</string>
    <string name="adicionar_contato">Adicionar contato</string>
    <string name="email">Email:</string>
    <string name="casa">Casa:</string>
    <string name="celular">Celular:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome:</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="todo">TODO</string>
</resources>