<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/lblNameUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="5dp"
        android:text="@string/nome"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPhoneUpdate"
        app:layout_constraintEnd_toStartOf="@+id/txtPersonNameUpdate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblPhoneUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:padding="5dp"
        android:text="@string/celular"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPhoneUpdate"
        app:layout_constraintEnd_toStartOf="@+id/txtPhoneUpdate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblHomeUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="238dp"
        android:padding="5dp"
        android:text="@string/casa"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtAddressUpdate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblEmailUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtEmailUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddressUpdate" />

    <ImageView
        android:id="@+id/imgContactUpdate"
        android:layout_width="104dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="189dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAddressUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_profile" />

    <Button
        android:id="@+id/btnCancellUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FBDFD2"
        android:text="Cancelar"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSaveUpdate"
        app:layout_constraintStart_toEndOf="@+id/lblEmailUpdate" />

    <Button
        android:id="@+id/btnSaveUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="58dp"
        android:backgroundTint="#015C30"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancellUpdate" />

    <Button
        android:id="@+id/btnBackUpdate"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="117dp"
        android:backgroundTint="#3D5AFE"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/lblNameUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmailUpdate"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:text="m@m.com"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblEmailUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblEmailUpdate" />

    <EditText
        android:id="@+id/txtAddressUpdate"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:text="Rua"
        android:textColor="@color/white"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblHomeUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblHomeUpdate" />

    <EditText
        android:id="@+id/txtPhoneUpdate"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="117dp"
        android:ems="10"
        android:text="12345"
        android:textColor="@color/white"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/lblEmailUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblPhoneUpdate"
        app:layout_constraintTop_toBottomOf="@+id/imgContactUpdate" />

    <EditText
        android:id="@+id/txtPersonNameUpdate"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblNameUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblNameUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>